# Rust-learning

./: Cargo.toml  diesel.toml
migrations/2024-10-13-152552_create_users/: up.sql
migrations/2024-11-26-195131_add_roles_and_update_users/: down.sql  up.sql
migrations/2025-01-04-220627_migrate-to-uuid/: down.sql  up.sql
src/: controller.rs  lib.rs  main.rs  models.rs  repository.rs  routes.rs  schema.rs  service.rs
src/controllers/: auth.rs  roles.rs  users.rs
src/error/: mod.rs
src/helpers/: decode_token.rs  establish_connection_pool.rs  generate_tokens.rs  hash_password.rs  init_database.rs  mod.rs  verify_password.rs  verify_tokens.rs
src/hoc/: mod.rs
src/middlewares/: mod.rs
src/middlewares/catchers/: mod.rs  unauthorized_catcher.rs  unprocessable_entity_catcher.rs
src/middlewares/guards/: admin_auth.rs  mod.rs  token_auth.rs
src/models/: roles.rs  users.rs
src/pagination/: mod.rs
src/repositories/: roles.rs  users.rs
src/services/: auth.rs  mod.rs  roles.rs  users.rs
src/traits/: change_password_dto.rs  claims.rs  login_data.rs  mod.rs  refresh_data.rs  token_response.rs
src/wrappers/: handle_result.rs  mod.rs
