[package]
name = "rust-test-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07", "uuid"] }
r2d2 = "0.8"
uuid = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_contrib = "0.4.11"
dotenvy = "0.15.7"
chrono = "0.4.38"